// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end 2 end tests should generate statements 1`] = `
"# this is an auto generated file. This will be overwritten
query Hero($episode: Episode) {
  hero(episode: $episode) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    ... on Human {
      homePlanet
    }
    ... on Droid {
      primaryFunction
    }
  }
}
query Human($id: String!) {
  human(id: $id) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    homePlanet
  }
}
query Droid($id: String!) {
  droid(id: $id) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    primaryFunction
  }
}
"
`;

exports[`end 2 end tests should generate statements in JS 1`] = `
"// eslint-disable
// this is an auto generated file. This will be overwritten

export const hero = \`query Hero($episode: Episode) {
  hero(episode: $episode) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    ... on Human {
      homePlanet
    }
    ... on Droid {
      primaryFunction
    }
  }
}
\`;
export const human = \`query Human($id: String!) {
  human(id: $id) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    homePlanet
  }
}
\`;
export const droid = \`query Droid($id: String!) {
  droid(id: $id) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    primaryFunction
  }
}
\`;
"
`;

exports[`end 2 end tests should generate statements in Typescript 1`] = `
"// tslint:disable
// this is an auto generated file. This will be overwritten

export const hero = \`query Hero($episode: Episode) {
  hero(episode: $episode) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    ... on Human {
      homePlanet
    }
    ... on Droid {
      primaryFunction
    }
  }
}
\`;
export const human = \`query Human($id: String!) {
  human(id: $id) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    homePlanet
  }
}
\`;
export const droid = \`query Droid($id: String!) {
  droid(id: $id) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    primaryFunction
  }
}
\`;
"
`;

exports[`end 2 end tests should generate statements in flow 1`] = `
"// @flow
// this is an auto generated file. This will be overwritten

export const hero = \`query Hero($episode: Episode) {
  hero(episode: $episode) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    ... on Human {
      homePlanet
    }
    ... on Droid {
      primaryFunction
    }
  }
}
\`;
export const human = \`query Human($id: String!) {
  human(id: $id) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    homePlanet
  }
}
\`;
export const droid = \`query Droid($id: String!) {
  droid(id: $id) {
    id
    name
    friends {
      id
      name
      friends {
        id
        name
        appearsIn
        ... on Human {
          homePlanet
        }
        ... on Droid {
          primaryFunction
        }
      }
      appearsIn
      ... on Human {
        homePlanet
      }
      ... on Droid {
        primaryFunction
      }
    }
    appearsIn
    primaryFunction
  }
}
\`;
"
`;
